--- a/apps/unit-testing/src/app/app.component.html
+++ b/apps/unit-testing/src/app/app.component.html
@@ -1,1 +1,3 @@
-<dev-meetup-nx-welcome></dev-meetup-nx-welcome>
+<dev-meetup-color-picker [selectedColor]='selectedColor$ | async'
+                         (colorSelected)='onColorSelected($event)'
+></dev-meetup-color-picker>
