--- a/apps/unit-testing/src/app/app.component.html
+++ b/apps/unit-testing/src/app/app.component.html
@@ -1,3 +1,1 @@
-<dev-meetup-color-picker [selectedColor]='selectedColor$ | async'
-                         (colorSelected)='onColorSelected($event)'
-></dev-meetup-color-picker>
+<router-outlet></router-outlet>
